# clang-assignment

./: CMakeLists.txt  readme.md
applications/: CMakeLists.txt  readme.md
applications/AFakeLoggingFramework/: AFakeLoggingFramework.cpp  AFakeLoggingFramework.h  CMakeLists.txt
logEventFinder/: CMakeLists.txt  interpretBase.hpp  interpretInteger.hpp  interpretString.hpp  lastRelevantStatement.hpp  logEventFinder.cpp  logEventFinder.hpp  main.cpp  matchers.hpp
tests/: CMakeLists.txt
tests/all-tests/: CMakeLists.txt  test.cpp
wiki/: Clang-installation-on-windows-10.md  Recent-cpp.md  ast-visitors.md  clang-ast.md  dump-ast.md  how-to-write-clang-tools.md  matchers.md  navigate-the-ast.md  something-about-clang.md
